[update] doc open api
